# SimVisionGPT5

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  WaveformView.cpp  WaveformView.h
src/core/: Signal.h  VCDParser.cpp  VCDParser.h  WaveformDatabase.cpp  WaveformDatabase.h
src/gui/: HierarchyDock.cpp  HierarchyDock.h
